testdata/ingress_nlb_extra_listeners/input/k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    zalando.org/aws-load-balancer-type: nlb
    zalando.org/aws-nlb-extra-listeners: >
      [{
        "protocol": "TCP",
        "listenport": 22,
        "targetport": 2222,
        "podlabel": "application=ssh-service"
      }]
spec:
  rules:
  - host: foo.bar.org
    http:
      paths:
      - backend:
          service:
            name: foo-bar-service
            port:
              name: main-port
        path: /
        pathType: ImplementationSpecific
